--- a/soft/viral_marketing_decision_psl.ipynb
+++ b/soft/viral_marketing_decision_psl.ipynb
@@ -133,19 +133,21 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def convert_constraint1(marketed, buy, buy_from_marketing):\n",
+    "def convert_constraint1(marketed, buy, buy_from_marketing, delta):\n",
     "     #TODO: add buy from marketing\n",
     "    #marketed(u) & buy_from_marketing(u) ->buy(u)\n",
+    "    #~marketed(u) & buy_from_marketing(u) ->~buy(u)\n",
     "    constraint = []\n",
     "    obj_function = 0.0\n",
     "    for uid,value in buy.items():\n",
     "        obj_function+=cvxpy.pos(cvxpy.pos(marketed[uid]+buy_from_marketing[uid]-1.0)-buy[uid])\n",
-    "        constraint.append(cvxpy.pos(cvxpy.pos(marketed[uid]+buy_from_marketing[uid]-1.0)-buy[uid]))\n",
-    "        #constraint.append(marketed[uid]-buy[uid]<=0)\n",
+    "        obj_function+=cvxpy.pos(cvxpy.pos((1-marketed[uid])+buy_from_marketing[uid]-1.0)-(1-buy[uid]))\n",
+    "        constraint.append(delta >= cvxpy.pos(cvxpy.pos(marketed[uid]+buy_from_marketing[uid]-1.0)-buy[uid]))\n",
+    "        constraint.append(delta >= cvxpy.pos(((1-marketed[uid])+buy_from_marketing[uid]-1.0)-(1-buy[uid])))\n",
     "    return constraint,obj_function"
    ]
   },
@@ -153,13 +155,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def convert_constraint2(reachable, buy, buy_from_trust):\n",
+    "def convert_constraint2(reachable, buy, buy_from_trust, delta):\n",
     "     #TODO: add buy from trust\n",
     "    #reachable(u,v) & buy(u) & buy_from_trust(u,v)-> buy(v)\n",
+    "    #reachable(u,v) & ~buy(u) & buy_from_trust(u,v)-> ~buy(v)\n",
     "    constraint = []\n",
     "    obj_function = 0.0\n",
     "    for edge,value in reachable.items():\n",
@@ -175,8 +178,9 @@
     "        else:\n",
     "            buy_from_trust_value = 0.0\n",
     "        obj_function+=cvxpy.pos(cvxpy.pos(cvxpy.pos(float(value_num)+buy[u]-1.0)+buy_from_trust_value -1) - buy[v])\n",
-    "        constraint.append(cvxpy.pos(cvxpy.pos(cvxpy.pos(float(value_num)+buy[u]-1.0)+buy_from_trust_value -1) - buy[v]))\n",
-    "        #constraint.append(float(value)+buy[u]-buy[v]<=1)\n",
+    "        obj_function+=cvxpy.pos(cvxpy.pos(cvxpy.pos(float(value_num)+(1-buy[u])-1.0)+buy_from_trust_value -1) - (1-buy[v]))\n",
+    "        constraint.append(delta >= cvxpy.pos(cvxpy.pos(cvxpy.pos(float(value_num)+buy[u]-1.0)+buy_from_trust_value -1) - buy[v]))\n",
+    "        constraint.append(delta >= cvxpy.pos(cvxpy.pos(cvxpy.pos(float(value_num)+(1-buy[u])-1.0)+buy_from_trust_value -1) - (1-buy[v])))\n",
     "    return constraint, obj_function"
    ]
   },
@@ -188,20 +192,36 @@
    },
    "outputs": [],
    "source": [
-    "def convert_constraint3(marketed, cost, budget, buy):\n",
+    "def convert_constraint3(marketed, cost, budget):\n",
     "     #TODO: add buy\n",
     "    #∑ cost(u) * marketed(u) ≤ B\n",
-    "    sum_cost = 0\n",
+    "    sum_cost = 0.0\n",
     "    for c in cost:\n",
     "        uid = c[0]\n",
-    "        value = float(c[1])\n",
+    "        value = float(c[1]) \n",
     "        sum_cost += value * marketed[uid]\n",
-    "    return [ sum_cost <= budget ], sum_cost"
+    "    return [sum_cost <= budget], sum_cost"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def add_prior(buy):\n",
+    "    #~buy(u)\n",
+    "    sum = 0.0\n",
+    "    for key, value in buy.items(): \n",
+    "        sum+= (value)\n",
+    "    return sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -234,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -276,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -293,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -309,29 +329,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def extract_edge(key):\n",
-    "    edge_str = str(key).replace('trusts(', '').replace(')','')\n",
+    "def extract_edge(key, string_code):\n",
+    "    edge_str = str(key).replace(string_code, '').replace(')','')\n",
     "    edges = edge_str.split(',')\n",
     "    return int(edges[0]),int(edges[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def extract_user_marketing(key):\n",
+    "    user = str(key).replace('buy_from_marketing(', '').replace(')','')\n",
+    "    return int(user)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def run_optimization(sample_graph_folder, sample_size, node_size, budget, delta):\n",
-    "    create_db_from_graph(sample_graph_folder, node_size)\n",
-    "    samples = read_samples(sample_graph_folder, node_size, sample_size)\n",
+    "    create_db_from_graph(sample_graph_folder+'data/', node_size)\n",
+    "    samples = read_samples(sample_graph_folder+'sample/', node_size, sample_size)\n",
     "\n",
     "    query_cost = '''\n",
     "    SELECT * from cost\n",
@@ -383,7 +416,8 @@
     "    \n",
     "    buys = []\n",
     "    reachables = []\n",
-    "    \n",
+    "    buy_from_trusts= []\n",
+    "    buy_from_marketings = []\n",
     "    for i in range(sample_size):\n",
     "        # make random variable for buy\n",
     "        buy = dict()\n",
@@ -398,38 +432,54 @@
     "        buy_from_trust = dict()\n",
     "        buy_from_marketing = dict()\n",
     "        for key in samples.keys():\n",
-    "            e1,e2 = extract_edge(key)\n",
-    "            edge = (e1,e2)\n",
-    "            reachable[edge] = samples[key][i]\n",
+    "            if str(key).startswith('trusts('):\n",
+    "                e1,e2 = extract_edge(key, string_code = 'trusts(')\n",
+    "                edge = (e1,e2)\n",
+    "                reachable[edge] = samples[key][i]\n",
+    "            elif str(key).startswith('buy_from_trust('):\n",
+    "                e1,e2 = extract_edge(key, string_code = 'buy_from_trust(' )\n",
+    "                edge = (e1,e2)\n",
+    "                buy_from_trust[edge] = samples[key][i]\n",
+    "                \n",
+    "            elif str(key).startswith('buy_from_marketing('):\n",
+    "                marketed_user = extract_user_marketing(key)\n",
+    "                buy_from_marketing[marketed_user] = samples[key][i]\n",
+    "            else:\n",
+    "                pass\n",
     "        reachables.append(reachable)\n",
-    "        #TODO: use samples for buy_from_trust\n",
-    "        \n",
-    "        #TODO:use samples for buy_from_marketing\n",
+    "        buy_from_trusts.append(buy_from_trust)\n",
+    "        buy_from_marketings.append(buy_from_marketing)\n",
     "    \n",
     "    objective_function = 0.0\n",
     "    # make the optimization problem \n",
     "    for i in range (sample_size):\n",
     "        objective_function += make_objective(buys[i], reward)\n",
     "    \n",
+    "    objective_function = objective_function* (1/float(sample_size))\n",
+    "    #print(objective_function)\n",
     "    # make the constraints\n",
     "    constraints = []\n",
+    "    \n",
+    "    function_constraint_3, obj_3 = convert_constraint3(marketed, cost, budget)\n",
+    "    objective_function+=obj_3\n",
+    "    #constraints+= function_constraint_3   \n",
+    "    \n",
     "    for i in range (sample_size):\n",
-    "        function_constraint_1,obj_1 = convert_constraint1(marketed, buys[i], buy_from_marketing[i])\n",
+    "        function_constraint_1,obj_1 = convert_constraint1(marketed, buys[i], buy_from_marketings[i], delta)\n",
     "        #constraints+=function_constraint_1\n",
-    "        objective_function+=1-obj_1\n",
-    "        function_constraint_2, obj_2 = convert_constraint2(reachables[i], buys[i], buy_from_trust[i])\n",
+    "        objective_function+=(1-obj_1)* (1/2*float(sample_size))\n",
+    "        function_constraint_2, obj_2 = convert_constraint2(reachables[i], buys[i], buy_from_trusts[i], delta)\n",
     "        #constraints+=function_constraint_2\n",
-    "        objective_function+=1-obj_2\n",
-    "        function_constraint_3, obj_3 = convert_constraint3(marketed, cost, budget, buys[i])\n",
-    "        objective_function+=obj_3\n",
-    "        #constraints+= function_constraint_3\n",
+    "        objective_function+=(1-obj_2)* (1/2*float(sample_size))\n",
+    "        objective_function+= add_prior(buys[i])* (1/float(sample_size))\n",
+    "        \n",
     "        ########################################\n",
     "        # make the fairness constraints\n",
     "        fairness_constraint1 = convert_fairness_constraint1(sensitive, buys[i], delta)\n",
     "        #constraints+=fairness_constraint1\n",
     "        fairness_constraint2 = convert_fairness_constraint2(sensitive, reachable, marketed, delta)\n",
     "        #constraints+=fairness_constraint2\n",
-    "        \n",
+    "       \n",
     "    # make the range constraints [0,1]\n",
     "    for var, value in var_dict.items():\n",
     "        constraints += [0 <= value, value <= 1]\n",
@@ -442,22 +492,37 @@
     "    \n",
     "\n",
     "    # Solve the problem\n",
-    "    objective_function = objective_function* (1/float(sample_size))\n",
+    "    #print('\\nobjective_function\\n%s'%('='*10))\n",
+    "    #print(objective_function)\n",
+    "    #print('\\nConstraints\\n%s'%('='*10))\n",
+    "    #print(constraints)\n",
     "    objective = cvxpy.Maximize(objective_function)\n",
     "    problem = cvxpy.Problem(objective, constraints)\n",
     "    final_result = problem.solve()\n",
     "    \n",
     "    \n",
     "    # Process the results\n",
-    "    result = dict()\n",
+    "    marketed_result = dict()\n",
     "    for user in users:\n",
     "        uid = user[0]\n",
     "        vid = ('marketed', uid)\n",
-    "        result[uid] = var_dict[vid].value\n",
-    "    \n",
+    "        marketed_result[uid] = var_dict[vid].value\n",
+    "        \n",
     "    \n",
     "    print('\\nMarketed results\\n%s'%('='*10))\n",
-    "    print(result)\n",
+    "    print(marketed_result)\n",
+    "    \n",
+    "    buyer_result = dict()\n",
+    "    for user in users:\n",
+    "        buyer_value = 0.0\n",
+    "        for i in range (sample_size):\n",
+    "            uid = user[0]\n",
+    "            vid = ('buy', i, uid)\n",
+    "            buyer_value+=var_dict[vid].value\n",
+    "        buyer_result[uid] = buyer_value* (1/float(sample_size))\n",
+    "    \n",
+    "    print('\\nBuyer results\\n%s'%('='*10))\n",
+    "    print(buyer_result)\n",
     "    \n",
     "    print('\\nStatus of optimization\\n%s'%('='*10))\n",
     "    print(problem.status)\n",
@@ -468,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -480,46 +545,43 @@
       "\n",
       "Users\n",
       "==========\n",
-      "[(0, 1.0), (1, 1.0), (2, 1.0), (3, 1.0), (4, 1.0), (5, 1.0), (6, 1.0), (7, 1.0), (8, 1.0), (9, 1.0)]\n",
+      "[(0, 1.0), (1, 1.0), (2, 1.0), (3, 1.0), (4, 1.0), (5, 1.0), (6, 1.0), (7, 1.0)]\n",
       "\n",
       "Cost\n",
       "==========\n",
-      "[(0, 1.0), (1, 1.0), (2, 1.0), (3, 1.0), (4, 1.0), (5, 1.0), (6, 1.0), (7, 1.0), (8, 1.0), (9, 1.0)]\n",
+      "[(0, -2.0), (1, -2.0), (2, -2.0), (3, -2.0), (4, -2.0), (5, -2.0), (6, -2.0), (7, -2.0)]\n",
       "\n",
       "Reward\n",
       "==========\n",
-      "[(0, 1.0), (1, 1.0), (2, 1.0), (3, 1.0), (4, 1.0), (5, 1.0), (6, 1.0), (7, 1.0), (8, 1.0), (9, 1.0)]\n",
+      "[(0, 5.0), (1, 5.0), (2, 5.0), (3, 5.0), (4, 5.0), (5, 5.0), (6, 5.0), (7, 5.0)]\n",
       "\n",
       "Sensitive\n",
       "==========\n",
-      "[(0, 1.0), (1, 1.0), (2, 0.0), (3, 0.0), (4, 0.0), (5, 0.0), (6, 0.0), (7, 0.0), (8, 1.0), (9, 1.0)]\n",
+      "[(0, 1.0), (1, 0.0), (2, 0.0), (3, 1.0), (4, 0.0), (5, 0.0), (6, 1.0), (7, 0.0)]\n",
       "\n",
       "Trusts\n",
       "==========\n",
-      "[(0, 8, 1.0), (0, 6, 1.0), (0, 7, 1.0), (1, 6, 1.0), (1, 7, 1.0), (2, 8, 1.0), (2, 9, 1.0), (2, 6, 1.0), (2, 7, 1.0), (3, 8, 1.0), (3, 9, 1.0), (3, 6, 1.0), (3, 7, 1.0), (4, 8, 1.0), (4, 9, 1.0), (4, 6, 1.0), (4, 7, 1.0), (5, 9, 1.0), (5, 6, 1.0), (6, 7, 1.0), (6, 8, 1.0), (6, 9, 1.0), (7, 8, 1.0), (7, 9, 1.0)]\n",
+      "[(0, 6, 1.0), (1, 6, 1.0), (1, 7, 1.0), (2, 6, 1.0), (2, 7, 1.0), (3, 6, 1.0), (3, 7, 1.0), (4, 6, 1.0), (4, 7, 1.0), (5, 6, 1.0), (5, 7, 1.0), (6, 7, 1.0)]\n",
       "\n",
       "Reachable\n",
       "==========\n",
-      "[(0, 0, None), (0, 1, None), (0, 2, None), (0, 3, None), (0, 4, None), (0, 5, None), (0, 6, None), (0, 7, None), (0, 8, None), (0, 9, None), (1, 0, None), (1, 1, None), (1, 2, None), (1, 3, None), (1, 4, None), (1, 5, None), (1, 6, None), (1, 7, None), (1, 8, None), (1, 9, None), (2, 0, None), (2, 1, None), (2, 2, None), (2, 3, None), (2, 4, None), (2, 5, None), (2, 6, None), (2, 7, None), (2, 8, None), (2, 9, None), (3, 0, None), (3, 1, None), (3, 2, None), (3, 3, None), (3, 4, None), (3, 5, None), (3, 6, None), (3, 7, None), (3, 8, None), (3, 9, None), (4, 0, None), (4, 1, None), (4, 2, None), (4, 3, None), (4, 4, None), (4, 5, None), (4, 6, None), (4, 7, None), (4, 8, None), (4, 9, None), (5, 0, None), (5, 1, None), (5, 2, None), (5, 3, None), (5, 4, None), (5, 5, None), (5, 6, None), (5, 7, None), (5, 8, None), (5, 9, None), (6, 0, None), (6, 1, None), (6, 2, None), (6, 3, None), (6, 4, None), (6, 5, None), (6, 6, None), (6, 7, None), (6, 8, None), (6, 9, None), (7, 0, None), (7, 1, None), (7, 2, None), (7, 3, None), (7, 4, None), (7, 5, None), (7, 6, None), (7, 7, None), (7, 8, None), (7, 9, None), (8, 0, None), (8, 1, None), (8, 2, None), (8, 3, None), (8, 4, None), (8, 5, None), (8, 6, None), (8, 7, None), (8, 8, None), (8, 9, None), (9, 0, None), (9, 1, None), (9, 2, None), (9, 3, None), (9, 4, None), (9, 5, None), (9, 6, None), (9, 7, None), (9, 8, None), (9, 9, None)]\n",
-      "\n",
-      "Marketed results\n",
-      "==========\n",
-      "{0: 0.19527752476422544, 1: 0.19658014747817737, 2: 0.19332309623793192, 3: 0.19370786923724026, 4: 0.19338047291133204, 5: 0.19912058556786227, 6: 0.19353952549722928, 7: 0.19526140627256863, 8: 0.2007904750368914, 9: 0.20137000345079534}\n",
-      "\n",
-      "Status of optimization\n",
-      "==========\n",
-      "optimal\n",
-      "\n",
-      "Optimal value\n",
-      "==========\n",
-      "9.999999999246983\n"
+      "[(0, 0, None), (0, 1, None), (0, 2, None), (0, 3, None), (0, 4, None), (0, 5, None), (0, 6, None), (0, 7, None), (1, 0, None), (1, 1, None), (1, 2, None), (1, 3, None), (1, 4, None), (1, 5, None), (1, 6, None), (1, 7, None), (2, 0, None), (2, 1, None), (2, 2, None), (2, 3, None), (2, 4, None), (2, 5, None), (2, 6, None), (2, 7, None), (3, 0, None), (3, 1, None), (3, 2, None), (3, 3, None), (3, 4, None), (3, 5, None), (3, 6, None), (3, 7, None), (4, 0, None), (4, 1, None), (4, 2, None), (4, 3, None), (4, 4, None), (4, 5, None), (4, 6, None), (4, 7, None), (5, 0, None), (5, 1, None), (5, 2, None), (5, 3, None), (5, 4, None), (5, 5, None), (5, 6, None), (5, 7, None), (6, 0, None), (6, 1, None), (6, 2, None), (6, 3, None), (6, 4, None), (6, 5, None), (6, 6, None), (6, 7, None), (7, 0, None), (7, 1, None), (7, 2, None), (7, 3, None), (7, 4, None), (7, 5, None), (7, 6, None), (7, 7, None)]\n"
      ]
     }
    ],
    "source": [
-    "sample_graph_folder = '../sample_graphs/'\n",
-    "run_optimization(sample_graph_folder, sample_size = 1000, node_size = 10, budget = 4, delta = 0.001)"
+    "sample_graph_folder = '../sample_graphs2/'\n",
+    "run_optimization(sample_graph_folder, sample_size = 1000, node_size = 8, budget = 4, delta = 0.001)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
