--- a/soft/viral_marketing_decision_psl.ipynb
+++ b/soft/viral_marketing_decision_psl.ipynb
@@ -215,7 +215,7 @@
     "    #~buy(u)\n",
     "    sum = 0.0\n",
     "    for key, value in buy.items(): \n",
-    "        sum+= (value)\n",
+    "        sum+= (1-value)\n",
     "    return sum"
    ]
   },
@@ -356,13 +356,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def run_optimization(sample_graph_folder, sample_size, node_size, budget, delta):\n",
+    "    \n",
+    "    w_prior = 0.5\n",
+    "    w_const = 1.0\n",
+    "    w_reward = 10.0\n",
     "    create_db_from_graph(sample_graph_folder+'data/', node_size)\n",
     "    samples = read_samples(sample_graph_folder+'sample/', node_size, sample_size)\n",
     "\n",
@@ -455,23 +459,24 @@
     "    for i in range (sample_size):\n",
     "        objective_function += make_objective(buys[i], reward)\n",
     "    \n",
-    "    objective_function = objective_function* (1/float(sample_size))\n",
+    "    objective_function = objective_function* (1/float(sample_size)) * w_reward\n",
     "    #print(objective_function)\n",
     "    # make the constraints\n",
     "    constraints = []\n",
     "    \n",
     "    function_constraint_3, obj_3 = convert_constraint3(marketed, cost, budget)\n",
-    "    objective_function+=obj_3\n",
+    "    objective_function+=obj_3 * w_reward\n",
     "    #constraints+= function_constraint_3   \n",
     "    \n",
     "    for i in range (sample_size):\n",
     "        function_constraint_1,obj_1 = convert_constraint1(marketed, buys[i], buy_from_marketings[i], delta)\n",
     "        #constraints+=function_constraint_1\n",
-    "        objective_function+=(1-obj_1)* (1/2*float(sample_size))\n",
+    "        objective_function+=(1-(obj_1* (1/2*float(sample_size)))) * w_const\n",
     "        function_constraint_2, obj_2 = convert_constraint2(reachables[i], buys[i], buy_from_trusts[i], delta)\n",
     "        #constraints+=function_constraint_2\n",
-    "        objective_function+=(1-obj_2)* (1/2*float(sample_size))\n",
-    "        objective_function+= add_prior(buys[i])* (1/float(sample_size))\n",
+    "        objective_function+=(1-(obj_2* (1/2*float(sample_size)))) * w_const\n",
+    "        \n",
+    "        objective_function+= 1- add_prior(1-(buys[i]* (1/float(sample_size))))* w_prior\n",
     "        \n",
     "        ########################################\n",
     "        # make the fairness constraints\n",
@@ -533,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -566,6 +571,18 @@
       "Reachable\n",
       "==========\n",
       "[(0, 0, None), (0, 1, None), (0, 2, None), (0, 3, None), (0, 4, None), (0, 5, None), (0, 6, None), (0, 7, None), (1, 0, None), (1, 1, None), (1, 2, None), (1, 3, None), (1, 4, None), (1, 5, None), (1, 6, None), (1, 7, None), (2, 0, None), (2, 1, None), (2, 2, None), (2, 3, None), (2, 4, None), (2, 5, None), (2, 6, None), (2, 7, None), (3, 0, None), (3, 1, None), (3, 2, None), (3, 3, None), (3, 4, None), (3, 5, None), (3, 6, None), (3, 7, None), (4, 0, None), (4, 1, None), (4, 2, None), (4, 3, None), (4, 4, None), (4, 5, None), (4, 6, None), (4, 7, None), (5, 0, None), (5, 1, None), (5, 2, None), (5, 3, None), (5, 4, None), (5, 5, None), (5, 6, None), (5, 7, None), (6, 0, None), (6, 1, None), (6, 2, None), (6, 3, None), (6, 4, None), (6, 5, None), (6, 6, None), (6, 7, None), (7, 0, None), (7, 1, None), (7, 2, None), (7, 3, None), (7, 4, None), (7, 5, None), (7, 6, None), (7, 7, None)]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'dict' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-d353107e6d9a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msample_graph_folder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'../sample_graphs2/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mrun_optimization\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_graph_folder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbudget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.001\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-15-12a659480faf>\u001b[0m in \u001b[0;36mrun_optimization\u001b[0;34m(sample_graph_folder, sample_size, node_size, budget, delta)\u001b[0m\n\u001b[1;32m    113\u001b[0m         \u001b[0mobjective_function\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj_2\u001b[0m\u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mw_const\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 115\u001b[0;31m         \u001b[0mobjective_function\u001b[0m\u001b[0;34m+=\u001b[0m \u001b[0madd_prior\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuys\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m \u001b[0mw_prior\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    116\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m         \u001b[0;31m########################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'dict' and 'float'"
      ]
     }
    ],
